--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <ul class="nav navbar-nav visible-xs">
         <li><a class="menu-item" href="#">Bharatnatyam</a></li>
         <li><a class="menu-item" href="#">Kathak</a></li> 
-        <li><a class="menu-item" href="#">Sushi</a></li> 
+        <li><a class="menu-item" href="#">Kathakali</a></li> 
       </ul>
     </div>
 
